--- a/app.cfg
+++ b/app.cfg
@@ -12,5 +12,5 @@ CRE_CYC(CYC_RUNNER, { TA_NULL, { TNFY_ACTTSK, RUNNER_TASK }, 10 * 1000, 1 * 1000
 ATT_MOD("app.o");
 
 ATT_MOD("LineTracer.o");
-ATT_MOD("Walker.o");
-ATT_MOD("LineMonitor.o");
+ATT_MOD("CalcPID.o");
+ATT_MOD("Runner.o");
